# hslua-module-aeson

./: README.md  hslua-module-aeson.cabal
src/Foreign/Lua/Module/: Aeson.hs
test/: aeson-module-tests.lua  test-hslua-module-aeson.hs
